Update and rename 请和我谈恋爱.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>可以和小狗在一起吗</title>
+<title>可以玩一会手机吗</title>
 <style>
     :root{--pink:#c84e68;--blue:#2271b3;}
     *{box-sizing:border-box;margin:0;padding:0}
@@ -33,7 +33,7 @@
     <!-- 初始用 狗狗1.jpg -->
     <img id="dog" src="狗狗1.jpg" alt="dog">
 
-    <h1 id="title">可以和小狗在一起吗？</h1>
+    <h1 id="title">可以玩一会手机吗？</h1>
 
     <div id="buttons">
         <button id="yes">好</button>
@@ -52,8 +52,8 @@
 
     // “不好”按钮依次显示的文字
     const phrases  = [
-        "可我很喜欢你嘛",
-        "不要不理我",
+        "可我今天很努力学习了呀",
+        "真的不能玩吗",
         "呜呜呜呜呜",
         "汪汪汪汪~",
         "😭 求求你~"
